<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_bluetooth_target"
        android:title="@string/pref_bluetooth_target"
        android:defaultValue="none"
        android:summary="@string/pref_summary_bluetooth_target" />
    <EditTextPreference
        android:key="pref_threshold"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:title="@string/pref_threshold"
        android:summary="@string/pref_summary_threshold"
        android:defaultValue="0.7"/>
    <CheckBoxPreference
        android:key="pref_vibrate"
        android:title="@string/pref_vibrate"
        android:summary="@string/pref_summary_vibrate"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="pref_alert"
        android:title="@string/pref_alert"
        android:summary="@string/pref_summary_alert"
        android:defaultValue="false"/>

</PreferenceScreen>