<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <view class="lv.edi.HeadTilt.HeadTiltView" android:id="@+id/headtiltview"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5pt"
        android:orientation="horizontal"
        >
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_save_state"
            android:onClick="onClickSave"
            ></Button>
        <ToggleButton
            android:id="@+id/buttonRun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/toggle_button_stop"
            android:textOff="@string/toggle_button_start"
            android:onClick="onClickStart"/>

    </LinearLayout>
</LinearLayout>
